fixed enquiry and enquiry reply